[package]
name = "snax_lib"
version.workspace = true
edition.workspace = true

[lib]
# building a lib as well here *just* for nameof functionality 
crate-type = ["cdylib", "lib"]

[dependencies]
pelite = "0.10.0"
retour = { version = "0.3.1", features = ["static-detour"] }

[dependencies.windows]
version = "0.*"
features = [
    "Win32_System_LibraryLoader",
]
